--- a/Connections/Incoming/1x10.md
+++ b/Connections/Incoming/1x10.md
@@ -1,1 +1,45 @@
+🔗 **Связи для блока `1.10 Индексы` (`index_manager`)**
+📦 Пакет: `1. Архитектура и Хранилище`
 
+---
+
+### 🔻 Исходящие связи (`index_manager --> X`)
+
+| Направление                            | Целевой блок                                               | Назначение |
+| -------------------------------------- | ---------------------------------------------------------- | ---------- |
+| `index_manager --> column_store`       | Поддержка bitmap- и инвертированных индексов               |            |
+| `index_manager --> row_store`          | Индексы на строковые таблицы (B+Tree, Hash)                |            |
+| `index_manager --> json_store`         | Индексация по JSON-полям (inverted index)                  |            |
+| `index_manager --> adaptive_joins`     | Использование индексов для index-nested loop               |            |
+| `index_manager --> query_planner`      | Планирование запросов с учетом статистики и типов индексов |            |
+| `index_manager --> compression_engine` | Сжатие индексов                                            |            |
+| `index_manager --> partition_manager`  | Локальные индексы по партициям                             |            |
+| `index_manager --> buffer_pool`        | Индексы как часть буферного пула                           |            |
+| `index_manager --> wal_manager`        | WAL для изменений индексов                                 |            |
+| `index_manager --> mvcc_engine`        | Версионность и видимость индексов                          |            |
+
+---
+
+### 🔺 Входящие связи (`X --> index_manager`)
+
+| Источник                               | Назначение                                    |
+| -------------------------------------- | --------------------------------------------- |
+| `sql_planner --> index_manager`        | Выбор плана запроса с учетом индексов         |
+| `table_create --> index_manager`       | Создание/удаление индексов                    |
+| `etl_engine --> index_manager`         | Автоматическая генерация индексов при импорте |
+| `schema_evolver --> index_manager`     | Изменения индексов при ALTER TABLE            |
+| `adaptive_optimizer --> index_manager` | Адаптивная перестройка по статистике          |
+| `materialized_views --> index_manager` | Поддержка индексов на MV                      |
+| `mvcc_engine --> index_manager`        | Учет TID и версий в индексах                  |
+
+---
+
+### 🧩 Всего связей: **17**
+
+* Исходящие: **10**
+* Входящие: **7**
+
+---
+
+✅ Блок `1.10 Индексы` реализует гибкую поддержку всех типов индексов: **B+Tree, Hash, Bitmap, Inverted**, а также адаптивное индексирование.
+Связан с планировщиком, MVCC, WAL, партициями и оптимизатором.
