--- a/Connections/Incoming/1x11.md
+++ b/Connections/Incoming/1x11.md
@@ -1,1 +1,44 @@
+🔗 **Связи для блока `1.11 TTL и вытеснение` (`ttl_eviction`)**
+📦 Пакет: `1. Архитектура и Хранилище`
 
+---
+
+### 🔻 Исходящие связи (`ttl_eviction --> X`)
+
+| Направление                              | Целевой блок                             | Назначение |
+| ---------------------------------------- | ---------------------------------------- | ---------- |
+| `ttl_eviction --> buffer_pool`           | Удаление устаревших страниц из буфера    |            |
+| `ttl_eviction --> column_store`          | Очистка колонок по TTL                   |            |
+| `ttl_eviction --> row_store`             | Очистка строк по TTL                     |            |
+| `ttl_eviction --> cold_storage_fallback` | Перенос холодных данных перед удалением  |            |
+| `ttl_eviction --> quota_manager`         | Освобождение квотированных ресурсов      |            |
+| `ttl_eviction --> wal_manager`           | Генерация записей об удалении            |            |
+| `ttl_eviction --> snapshot_manager`      | TTL для snapshot-данных                  |            |
+| `ttl_eviction --> compression_engine`    | Уплотнение данных перед вытеснением      |            |
+| `ttl_eviction --> versioned_tables`      | TTL-очистка версионных записей           |            |
+| `ttl_eviction --> auto_rebalancer`       | Согласование вытеснения и ребалансировки |            |
+
+---
+
+### 🔺 Входящие связи (`X --> ttl_eviction`)
+
+| Источник                          | Назначение                                  |
+| --------------------------------- | ------------------------------------------- |
+| `config_loader --> ttl_eviction`  | Загрузка политики TTL                       |
+| `platform_init --> ttl_eviction`  | Активация при старте системы                |
+| `schema_evolver --> ttl_eviction` | Изменение TTL-политик при изменениях таблиц |
+| `cdc_streaming --> ttl_eviction`  | Очистка событий после доставки              |
+| `etl_engine --> ttl_eviction`     | Удаление временных данных после загрузки    |
+| `quota_manager --> ttl_eviction`  | Принудительное освобождение ресурса         |
+
+---
+
+### 🧩 Всего связей: **16**
+
+* Исходящие: **10**
+* Входящие: **6**
+
+---
+
+✅ Блок `1.11 TTL и вытеснение` отвечает за **автоматическое управление жизненным циклом данных**, интегрирован с хранилищем, буферами, квотами и репликацией.
+Критически важен для контроля памяти в **in-memory среде**.
