--- a/Connections/Incoming/1x12.md
+++ b/Connections/Incoming/1x12.md
@@ -1,1 +1,43 @@
+🔗 **Связи для блока `1.12 Холодное хранилище (SSD)` (`cold_storage_fallback`)**
+📦 Пакет: `1. Архитектура и Хранилище`
 
+---
+
+### 🔻 Исходящие связи (`cold_storage_fallback --> X`)
+
+| Направление                                    | Целевой блок                                               | Назначение |
+| ---------------------------------------------- | ---------------------------------------------------------- | ---------- |
+| `cold_storage_fallback --> buffer_pool`        | Запрос выгруженных страниц при необходимости               |            |
+| `cold_storage_fallback --> compression_engine` | Уплотнение данных перед выгрузкой                          |            |
+| `cold_storage_fallback --> ttl_eviction`       | Движение холодных данных в SSD перед удалением             |            |
+| `cold_storage_fallback --> snapshot_manager`   | Хранение архивных snapshot’ов                              |            |
+| `cold_storage_fallback --> wal_manager`        | Логгирование выгрузки на диск                              |            |
+| `cold_storage_fallback --> row_store`          | Выгрузка устаревших строк                                  |            |
+| `cold_storage_fallback --> column_store`       | Выгрузка колонок с малой активностью                       |            |
+| `cold_storage_fallback --> versioned_tables`   | Архивация старых версий                                    |            |
+| `cold_storage_fallback --> auto_rebalancer`    | Передвижение shard'ов в SSD-хранилище                      |            |
+| `cold_storage_fallback --> cold_storage_index` | Метаданные выгруженных данных (добавляется в новых блоках) |            |
+
+---
+
+### 🔺 Входящие связи (`X --> cold_storage_fallback`)
+
+| Источник                                  | Назначение                                |
+| ----------------------------------------- | ----------------------------------------- |
+| `ttl_eviction --> cold_storage_fallback`  | Выгрузка данных перед удалением           |
+| `config_loader --> cold_storage_fallback` | Параметры tiered storage                  |
+| `etl_engine --> cold_storage_fallback`    | Пакетная загрузка данных напрямую в SSD   |
+| `replication --> cold_storage_fallback`   | Использование SSD как backup fallback     |
+| `quota_manager --> cold_storage_fallback` | Учет объёма SSD при ограничении по квотам |
+
+---
+
+### 🧩 Всего связей: **15**
+
+* Исходящие: **10**
+* Входящие: **5**
+
+---
+
+✅ `1.12 Холодное хранилище (SSD)` — ключевой блок для **tiered-storage**, разгрузки оперативной памяти и долговременного хранения snapshot’ов, cold data и архивов.
+Поддерживает интеграцию с WAL, TTL, ребалансировкой и версионированием.
