--- a/Connections/Incoming/1x13.md
+++ b/Connections/Incoming/1x13.md
@@ -1,1 +1,44 @@
+🔗 **Связи для блока `1.13 Буферный пул` (`buffer_pool`)**
+📦 Пакет: `1. Архитектура и Хранилище`
 
+---
+
+### 🔻 Исходящие связи (`buffer_pool --> X`)
+
+| Направление                             | Целевой блок                                    | Назначение |
+| --------------------------------------- | ----------------------------------------------- | ---------- |
+| `buffer_pool --> page_cache`            | Организация LRU/ARC-алгоритма на уровне страниц |            |
+| `buffer_pool --> memory_allocator`      | Выделение памяти с учетом NUMA и CPU-affinity   |            |
+| `buffer_pool --> column_store`          | Хранение страниц колонок                        |            |
+| `buffer_pool --> row_store`             | Буферизация строковых страниц                   |            |
+| `buffer_pool --> cold_storage_fallback` | Выгрузка страниц при вытеснении                 |            |
+| `buffer_pool --> wal_manager`           | Отслеживание dirty-страниц для журналирования   |            |
+| `buffer_pool --> ttl_eviction`          | Поддержка удаляемости страниц по TTL            |            |
+| `buffer_pool --> plan_cache`            | Буферизация планов в памяти                     |            |
+| `buffer_pool --> mvcc_engine`           | Хранение версионных цепочек в буфере            |            |
+| `buffer_pool --> index_manager`         | Буферизация индексных структур (B+Tree, Hash)   |            |
+
+---
+
+### 🔺 Входящие связи (`X --> buffer_pool`)
+
+| Источник                             | Назначение                                           |
+| ------------------------------------ | ---------------------------------------------------- |
+| `config_loader --> buffer_pool`      | Загрузка параметров буфера (размер, eviction policy) |
+| `platform_init --> buffer_pool`      | Инициализация при старте системы                     |
+| `ttl_eviction --> buffer_pool`       | Команды на вытеснение страниц                        |
+| `adaptive_optimizer --> buffer_pool` | Динамическая подстройка под планировщик              |
+| `instant_snapshot --> buffer_pool`   | Захват состояния буфера при snapshot'ах              |
+| `quota_manager --> buffer_pool`      | Контроль потребления памяти                          |
+
+---
+
+### 🧩 Всего связей: **16**
+
+* Исходящие: **10**
+* Входящие: **6**
+
+---
+
+✅ `1.13 Буферный пул` — ядро **in-memory-архитектуры**, поддерживает кэширование, dirty-трекинг, взаимодействует с WAL, eviction, cold storage, MVCC и планами запросов.
+Задействован практически в каждом критичном пути исполнения запроса.
