--- a/Connections/Incoming/1x14.md
+++ b/Connections/Incoming/1x14.md
@@ -1,1 +1,44 @@
+🔗 **Связи для блока `1.14 Arrow-слой` (`arrow_layout`)**
+📦 Пакет: `1. Архитектура и Хранилище`
 
+---
+
+### 🔻 Исходящие связи (`arrow_layout --> X`)
+
+| Направление                              | Целевой блок                                          | Назначение |
+| ---------------------------------------- | ----------------------------------------------------- | ---------- |
+| `arrow_layout --> column_store`          | Использование Arrow формата для представления колонок |            |
+| `arrow_layout --> vectorized_executor`   | Векторный доступ к данным через Arrow                 |            |
+| `arrow_layout --> streaming_aggregator`  | Стриминговая агрегация по Arrow-колонкам              |            |
+| `arrow_layout --> ml_runtime`            | Подача Arrow-представления в ML-инференс              |            |
+| `arrow_layout --> arrow_runtime`         | Использование в runtime-операциях                     |            |
+| `arrow_layout --> for_encoding`          | Сжатие на уровне Arrow-полей                          |            |
+| `arrow_layout --> cold_storage_fallback` | Сериализация Arrow-блоков в SSD                       |            |
+| `arrow_layout --> jit_engine`            | Генерация JIT-кода под Arrow layout                   |            |
+| `arrow_layout --> arrow_executor`        | Поддержка Arrow-операторов в планах                   |            |
+| `arrow_layout --> analytic_engine`       | Векторная аналитика на базе Arrow                     |            |
+
+---
+
+### 🔺 Входящие связи (`X --> arrow_layout`)
+
+| Источник                               | Назначение                                  |
+| -------------------------------------- | ------------------------------------------- |
+| `config_loader --> arrow_layout`       | Включение режима Arrow                      |
+| `column_store --> arrow_layout`        | Трансформация внутренних колонок в Arrow    |
+| `etl_engine --> arrow_layout`          | Загрузка данных напрямую в Arrow-структуры  |
+| `adaptive_optimizer --> arrow_layout`  | Выбор формата хранения (Arrow vs row-store) |
+| `pl_lang_runtime --> arrow_layout`     | Обработка векторных структур в процедурах   |
+| `vectorized_executor --> arrow_layout` | Использование Arrow-блоков как входных      |
+
+---
+
+### 🧩 Всего связей: **16**
+
+* Исходящие: **10**
+* Входящие: **6**
+
+---
+
+✅ `1.14 Arrow-слой` — ключевой элемент **векторного исполнения** и поддержки аналитики, ML и JIT. Обеспечивает **zero-copy**, SIMD-доступ и взаимодействие с современными фреймворками.
+Имеет прочную интеграцию с column store, executor, ML и cold tier.
