--- a/Connections/Incoming/1x15.md
+++ b/Connections/Incoming/1x15.md
@@ -1,1 +1,44 @@
+🔗 **Связи для блока `1.15 FOR-кодирование` (`for_encoding`)**
+📦 Пакет: `1. Архитектура и Хранилище`
 
+---
+
+### 🔻 Исходящие связи (`for_encoding --> X`)
+
+| Направление                              | Целевой блок                                    | Назначение |
+| ---------------------------------------- | ----------------------------------------------- | ---------- |
+| `for_encoding --> compression_engine`    | Реализация FOR как одного из методов компрессии |            |
+| `for_encoding --> column_store`          | Сжатие колонок с числовыми данными              |            |
+| `for_encoding --> arrow_layout`          | Использование FOR при сериализации Arrow-блоков |            |
+| `for_encoding --> cold_storage_fallback` | FOR-кодирование для выгрузки в SSD              |            |
+| `for_encoding --> versioned_tables`      | Сжатие исторических версий                      |            |
+| `for_encoding --> buffer_pool`           | FOR-закодированные страницы в памяти            |            |
+| `for_encoding --> analytic_engine`       | Упрощение агрегаций и ранжирования              |            |
+| `for_encoding --> streaming_aggregator`  | Обработка компактных потоков данных             |            |
+| `for_encoding --> vectorized_executor`   | SIMD-доступ к упакованным данным                |            |
+| `for_encoding --> ml_runtime`            | Предобработка входов моделей ML                 |            |
+
+---
+
+### 🔺 Входящие связи (`X --> for_encoding`)
+
+| Источник                              | Назначение                                    |
+| ------------------------------------- | --------------------------------------------- |
+| `config_loader --> for_encoding`      | Выбор схемы сжатия (FOR, RLE, Dictionary)     |
+| `adaptive_optimizer --> for_encoding` | Динамический выбор FOR при построении плана   |
+| `etl_engine --> for_encoding`         | Кодирование при загрузке в колоночные таблицы |
+| `jit_engine --> for_encoding`         | Генерация SIMD-декодеров                      |
+| `arrow_executor --> for_encoding`     | Обработка сжатых Arrow-данных                 |
+| `column_store --> for_encoding`       | Упаковка колонок при вставке                  |
+
+---
+
+### 🧩 Всего связей: **16**
+
+* Исходящие: **10**
+* Входящие: **6**
+
+---
+
+✅ `1.15 FOR-кодирование` (Frame-of-Reference) — эффективный способ хранения числовых данных с высокой степенью сжатия и возможностью векторного доступа.
+Используется везде, где требуется **компактность + быстродействие**: аналитика, ML, OLAP, Arrow, SSD-архивация.
