--- a/Connections/Incoming/1x16.md
+++ b/Connections/Incoming/1x16.md
@@ -1,1 +1,45 @@
+🔗 **Связи для блока `1.16 Ограничения multi-tenant` (`multi_tenant_limiter`)**
+📦 Пакет: `1. Архитектура и Хранилище`
 
+---
+
+### 🔻 Исходящие связи (`multi_tenant_limiter --> X`)
+
+| Направление                                      | Целевой блок                                      | Назначение |
+| ------------------------------------------------ | ------------------------------------------------- | ---------- |
+| `multi_tenant_limiter --> buffer_pool`           | Лимит потребления оперативной памяти              |            |
+| `multi_tenant_limiter --> wal_manager`           | Ограничение на размер WAL per tenant              |            |
+| `multi_tenant_limiter --> arrow_layout`          | Ограничение на векторные ресурсы                  |            |
+| `multi_tenant_limiter --> cold_storage_fallback` | Лимит на tiered-storage по tenant'у               |            |
+| `multi_tenant_limiter --> quota_manager`         | Делегирование в общую подсистему квот             |            |
+| `multi_tenant_limiter --> replication`           | Ограничение на количество реплик per tenant       |            |
+| `multi_tenant_limiter --> ci_cd_runner`          | Контроль ресурсов на автотесты per namespace      |            |
+| `multi_tenant_limiter --> plan_cache`            | Ограничение на кэш планов по tenant'у             |            |
+| `multi_tenant_limiter --> vectorized_executor`   | Контроль vmem/exec-time по изолированным сессиям  |            |
+| `multi_tenant_limiter --> schema_evolver`        | Ограничения на изменение схем в пределах tenant'а |            |
+
+---
+
+### 🔺 Входящие связи (`X --> multi_tenant_limiter`)
+
+| Источник                                  | Назначение                             |
+| ----------------------------------------- | -------------------------------------- |
+| `config_loader --> multi_tenant_limiter`  | Настройка лимитов и изоляции           |
+| `platform_init --> multi_tenant_limiter`  | Инициализация изолированных квот       |
+| `quota_manager --> multi_tenant_limiter`  | Централизованное управление лимитами   |
+| `access_control --> multi_tenant_limiter` | Разделение прав по namespace'ам        |
+| `etl_engine --> multi_tenant_limiter`     | Контроль при загрузке массивных данных |
+| `udf_sandbox --> multi_tenant_limiter`    | Ограничения на UDF per tenant          |
+
+---
+
+### 🧩 Всего связей: **16**
+
+* Исходящие: **10**
+* Входящие: **6**
+
+---
+
+✅ `1.16 Ограничения multi-tenant` — критичный модуль для поддержки многопользовательской среды.
+Он обеспечивает **изоляцию и контроль** по памяти, CPU, IOPS, WAL, кэшам и DSL/ETL нагрузке на уровне tenant/namespace.
+Работает в связке с `quota_manager` и входит в **обязательный функционал для multi-tenant in-memory СУБД уровня SAP HANA+**.
