--- a/Connections/Incoming/1x17.md
+++ b/Connections/Incoming/1x17.md
@@ -1,1 +1,45 @@
+🔗 **Связи для блока `1.17 Версионированные таблицы` (`versioned_tables`)**
+📦 Пакет: `1. Архитектура и Хранилище`
 
+---
+
+### 🔻 Исходящие связи (`versioned_tables --> X`)
+
+| Направление                                  | Целевой блок                                       | Назначение |
+| -------------------------------------------- | -------------------------------------------------- | ---------- |
+| `versioned_tables --> mvcc_engine`           | Использование цепочек версий (`compressed chains`) |            |
+| `versioned_tables --> snapshot_manager`      | Просмотр и управление историческими снимками       |            |
+| `versioned_tables --> isolation_levels`      | Гарантия консистентности на уровне транзакций      |            |
+| `versioned_tables --> for_encoding`          | Сжатие старых версий                               |            |
+| `versioned_tables --> cold_storage_fallback` | Архивация устаревших версий на SSD                 |            |
+| `versioned_tables --> arrow_layout`          | Представление исторических данных в Arrow          |            |
+| `versioned_tables --> recovery_service`      | Восстановление на момент времени (`AS OF`)         |            |
+| `versioned_tables --> analytic_engine`       | Исторический OLAP-анализ                           |            |
+| `versioned_tables --> schema_evolver`        | Поддержка версионирования схем                     |            |
+| `versioned_tables --> audit_logger`          | Протоколирование изменений на уровне версий        |            |
+
+---
+
+### 🔺 Входящие связи (`X --> versioned_tables`)
+
+| Источник                                  | Назначение                                      |
+| ----------------------------------------- | ----------------------------------------------- |
+| `config_loader --> versioned_tables`      | Включение режима `SYSTEM VERSIONED`             |
+| `etl_engine --> versioned_tables`         | Импорт данных с временными метками              |
+| `access_policies --> versioned_tables`    | Ограничения доступа по версии                   |
+| `pl_lang_runtime --> versioned_tables`    | Исторические SELECT/UPDATE/DELETE               |
+| `sql_parser --> versioned_tables`         | Парсинг `AS OF TIMESTAMP`                       |
+| `adaptive_optimizer --> versioned_tables` | Переключение между live и историческими данными |
+
+---
+
+### 🧩 Всего связей: **16**
+
+* Исходящие: **10**
+* Входящие: **6**
+
+---
+
+✅ `1.17 Версионированные таблицы` — ключевой компонент для поддержки **историчности данных** и **запросов во времени**.
+Обеспечивает `SYSTEM VERSIONED` таблицы, поддержку `AS OF`, интеграцию с MVCC и snapshot recovery.
+Необходим для соответствия требованиям real-time аналитики, аудита и BI.
