--- a/Connections/Incoming/2x01.md
+++ b/Connections/Incoming/2x01.md
@@ -1,1 +1,45 @@
+🔗 **Связи для блока `2.1 Движок MVCC` (`mvcc_engine`)**
+📦 Пакет: `2. Транзакционность и Надёжность`
 
+---
+
+### 🔻 Исходящие связи (`mvcc_engine --> X`)
+
+| Направление                        | Целевой блок                                 | Назначение |
+| ---------------------------------- | -------------------------------------------- | ---------- |
+| `mvcc_engine --> snapshot_manager` | Передача состояния видимости                 |            |
+| `mvcc_engine --> gc_vacuum`        | Очистка невидимых версий                     |            |
+| `mvcc_engine --> isolation_levels` | Выбор и применение правил изоляции           |            |
+| `mvcc_engine --> crash_recovery`   | Восстановление цепочек после сбоя            |            |
+| `mvcc_engine --> column_store`     | Поддержка версионности в колоночных таблицах |            |
+| `mvcc_engine --> row_store`        | Поддержка версионности в строковых таблицах  |            |
+| `mvcc_engine --> versioned_tables` | Хранение всех версий записи                  |            |
+| `mvcc_engine --> wal_manager`      | Логгирование MVCC-операций                   |            |
+| `mvcc_engine --> analytic_engine`  | Поддержка версионного OLAP-запроса           |            |
+| `mvcc_engine --> access_policies`  | Контроль доступа к версиям                   |            |
+
+---
+
+### 🔺 Входящие связи (`X --> mvcc_engine`)
+
+| Источник                             | Назначение                            |
+| ------------------------------------ | ------------------------------------- |
+| `txn_manager --> mvcc_engine`        | Координация версий по TID             |
+| `sql_executor --> mvcc_engine`       | Выполнение DML с версионированием     |
+| `pl_lang_runtime --> mvcc_engine`    | Хранимые процедуры с MVCC             |
+| `adaptive_optimizer --> mvcc_engine` | Подсказки для сканирования по версиям |
+| `snapshot_manager --> mvcc_engine`   | Определение видимости                 |
+| `etl_engine --> mvcc_engine`         | Массовая загрузка версионных данных   |
+
+---
+
+### 🧩 Всего связей: **16**
+
+* Исходящие: **10**
+* Входящие: **6**
+
+---
+
+✅ `2.1 Движок MVCC` — фундамент транзакционной подсистемы.
+Обеспечивает параллелизм, согласованность и snapshot isolation без блокировок.
+Связан с большинством критических компонентов OLTP/OLAP-движка, и соответствует требованиям SAP HANA+.
