--- a/Connections/Incoming/2x02.md
+++ b/Connections/Incoming/2x02.md
@@ -1,1 +1,44 @@
+🔗 **Связи для блока `2.2 Менеджер снимков` (`snapshot_manager`)**
+📦 Пакет: `2. Транзакционность и Надёжность`
 
+---
+
+### 🔻 Исходящие связи (`snapshot_manager --> X`)
+
+| Направление                             | Целевой блок                                         | Назначение |
+| --------------------------------------- | ---------------------------------------------------- | ---------- |
+| `snapshot_manager --> mvcc_engine`      | Передача snapshot visibility (TID → version chain)   |            |
+| `snapshot_manager --> isolation_levels` | Применение snapshot изоляции                         |            |
+| `snapshot_manager --> versioned_tables` | Управление состоянием SYSTEM VERSIONED таблиц        |            |
+| `snapshot_manager --> recovery_service` | Использование snapshot при восстановлении            |            |
+| `snapshot_manager --> column_store`     | Snapshot-ориентированное сканирование                |            |
+| `snapshot_manager --> buffer_pool`      | Закрепление snapshot в памяти                        |            |
+| `snapshot_manager --> instant_snapshot` | Сохранение/клонирование состояний в реальном времени |            |
+| `snapshot_manager --> analytic_engine`  | Поддержка аналитики на основе snapshot               |            |
+| `snapshot_manager --> etl_engine`       | Экспорт данных на основе снимка                      |            |
+| `snapshot_manager --> plan_cache`       | Кэширование планов на snapshot-данных                |            |
+
+---
+
+### 🔺 Входящие связи (`X --> snapshot_manager`)
+
+| Источник                              | Назначение                                  |
+| ------------------------------------- | ------------------------------------------- |
+| `txn_manager --> snapshot_manager`    | Получение snapshot при старте транзакции    |
+| `sql_executor --> snapshot_manager`   | Определение времени видимости               |
+| `mvcc_engine --> snapshot_manager`    | Актуализация snapshot при DML               |
+| `config_loader --> snapshot_manager`  | Включение snapshot-функциональности         |
+| `schema_evolver --> snapshot_manager` | Управление схемой через временные точки     |
+| `dsl_engine --> snapshot_manager`     | DSL-функции для snapshot-запросов (`AS OF`) |
+
+---
+
+### 🧩 Всего связей: **16**
+
+* Исходящие: **10**
+* Входящие: **6**
+
+---
+
+✅ `2.2 Менеджер снимков` — критически важен для snapshot isolation, поддержки запросов `AS OF`, мгновенных снимков (`instant clone`) и отказоустойчивости.
+Позволяет как выполнять OLAP-запросы на consistent snapshot, так и возвращаться к прошлым версиям таблиц и схем.
