--- a/Connections/Incoming/2x03.md
+++ b/Connections/Incoming/2x03.md
@@ -1,1 +1,45 @@
+🔗 **Связи для блока `2.3 WAL-журнал` (`wal_manager`)**
+📦 Пакет: `2. Транзакционность и Надёжность`
 
+---
+
+### 🔻 Исходящие связи (`wal_manager --> X`)
+
+| Направление                             | Целевой блок                         | Назначение |
+| --------------------------------------- | ------------------------------------ | ---------- |
+| `wal_manager --> wal_writer`            | Делегирование записи в WAL-бэкенд    |            |
+| `wal_manager --> crash_recovery`        | Восстановление по WAL-записям        |            |
+| `wal_manager --> recovery_service`      | Интеграция с recovery-менеджером     |            |
+| `wal_manager --> gc_vacuum`             | Удаление устаревших WAL-записей      |            |
+| `wal_manager --> buffer_pool`           | Сброс dirty pages в WAL при eviction |            |
+| `wal_manager --> ttl_eviction`          | Логгирование вытесненных строк       |            |
+| `wal_manager --> compression_engine`    | Сжатие логов (log compaction)        |            |
+| `wal_manager --> cold_storage_fallback` | Архивация логов в SSD                |            |
+| `wal_manager --> failover_engine`       | Репликация WAL в пассивный узел      |            |
+| `wal_manager --> replication`           | Трансляция WAL для Raft/Paxos-реплик |            |
+
+---
+
+### 🔺 Входящие связи (`X --> wal_manager`)
+
+| Источник                           | Назначение                          |
+| ---------------------------------- | ----------------------------------- |
+| `mvcc_engine --> wal_manager`      | Запись версий в журнал при DML      |
+| `txn_manager --> wal_manager`      | Начало/коммит/откат транзакции      |
+| `sql_executor --> wal_manager`     | Протоколирование выполнения запроса |
+| `snapshot_manager --> wal_manager` | Фиксация snapshot как checkpoint    |
+| `udf_engine --> wal_manager`       | Системные UDF с побочными эффектами |
+| `etl_engine --> wal_manager`       | Импортируемые данные журналируются  |
+| `config_loader --> wal_manager`    | Параметры: размер, путь, retention  |
+
+---
+
+### 🧩 Всего связей: **17**
+
+* Исходящие: **10**
+* Входящие: **7**
+
+---
+
+✅ `2.3 WAL-журнал` — один из самых критических компонентов, отвечающий за **долговечность данных (durability)**, **аварийное восстановление**, **логическую репликацию**, а также **поддержку горячих резервных копий**.
+Позволяет реализовать как delta-WAL, так и multi-stream журналирование с параллелизмом.
