--- a/Connections/Incoming/2x04.md
+++ b/Connections/Incoming/2x04.md
@@ -1,1 +1,46 @@
+🔗 **Связи для блока `2.4 Менеджер транзакций` (`txn_manager`)**
+📦 Пакет: `2. Транзакционность и Надёжность`
 
+---
+
+### 🔻 Исходящие связи (`txn_manager --> X`)
+
+| Направление                         | Целевой блок                                 | Назначение |
+| ----------------------------------- | -------------------------------------------- | ---------- |
+| `txn_manager --> mvcc_engine`       | Управление TID и версионностью               |            |
+| `txn_manager --> snapshot_manager`  | Инициализация snapshot при старте транзакции |            |
+| `txn_manager --> wal_manager`       | Протоколирование начала/коммита/отката       |            |
+| `txn_manager --> isolation_levels`  | Применение уровня изоляции                   |            |
+| `txn_manager --> failover_engine`   | Трансляция статуса активных транзакций       |            |
+| `txn_manager --> crash_recovery`    | Завершение незавершённых транзакций          |            |
+| `txn_manager --> access_control`    | Авторизация действий в транзакции            |            |
+| `txn_manager --> plan_cache`        | Привязка плана к конкретному snapshot        |            |
+| `txn_manager --> structured_logger` | Журналирование действий транзакции           |            |
+| `txn_manager --> udf_engine`        | Запуск UDF с транзакционной обвязкой         |            |
+
+---
+
+### 🔺 Входящие связи (`X --> txn_manager`)
+
+| Источник                                   | Назначение                                           |
+| ------------------------------------------ | ---------------------------------------------------- |
+| `sql_executor --> txn_manager`             | Явное управление транзакцией (BEGIN/COMMIT/ROLLBACK) |
+| `pl_lang_runtime --> txn_manager`          | Транзакции внутри хранимых процедур                  |
+| `cli_shell --> txn_manager`                | Контроль транзакций из CLI                           |
+| `dsl_engine --> txn_manager`               | DSL-процессы как атомарные блоки                     |
+| `rest_api --> txn_manager`                 | REST-сессии с транзакционным состоянием              |
+| `graphql_api --> txn_manager`              | GraphQL-запросы с транзакциями                       |
+| `integration_test_harness --> txn_manager` | Тестирование ACID-семантики                          |
+
+---
+
+### 🧩 Всего связей: **17**
+
+* Исходящие: **10**
+* Входящие: **7**
+
+---
+
+✅ `2.4 Менеджер транзакций` — координационный центр всей транзакционной модели.
+Обеспечивает контроль жизненного цикла транзакций, соответствие уровням изоляции, взаимодействие с MVCC, snapshot, WAL и API-слоями.
+Ключевой компонент для ACID-гарантий и поддержки многопользовательской среды.
