--- a/Connections/Incoming/2x05.md
+++ b/Connections/Incoming/2x05.md
@@ -1,1 +1,44 @@
+🔗 **Связи для блока `2.5 Очистка (vacuum)` (`gc_vacuum`)**
+📦 Пакет: `2. Транзакционность и Надёжность`
 
+---
+
+### 🔻 Исходящие связи (`gc_vacuum --> X`)
+
+| Направление                           | Целевой блок                                          | Назначение |
+| ------------------------------------- | ----------------------------------------------------- | ---------- |
+| `gc_vacuum --> mvcc_engine`           | Удаление устаревших версий строк (garbage collection) |            |
+| `gc_vacuum --> wal_manager`           | Удаление устаревших WAL-записей (log trimming)        |            |
+| `gc_vacuum --> buffer_pool`           | Очистка неактуальных страниц                          |            |
+| `gc_vacuum --> cold_storage_fallback` | Удаление просроченных данных из SSD                   |            |
+| `gc_vacuum --> ttl_eviction`          | Интеграция с TTL для синхронной очистки               |            |
+| `gc_vacuum --> plan_cache`            | Очистка устаревших планов                             |            |
+| `gc_vacuum --> snapshot_manager`      | Учёт активных snapshot при сборке мусора              |            |
+| `gc_vacuum --> index_manager`         | Удаление ссылок из индексов на удалённые версии       |            |
+| `gc_vacuum --> structured_logger`     | Логгирование активности vacuum-потоков                |            |
+
+---
+
+### 🔺 Входящие связи (`X --> gc_vacuum`)
+
+| Источник                        | Назначение                                  |
+| ------------------------------- | ------------------------------------------- |
+| `config_loader --> gc_vacuum`   | Настройка частоты и стратегий очистки       |
+| `txn_manager --> gc_vacuum`     | Завершённые транзакции как сигнал к очистке |
+| `failover_engine --> gc_vacuum` | Запуск очистки после failover               |
+| `etl_engine --> gc_vacuum`      | Очистка временных staging-таблиц            |
+| `rest_api --> gc_vacuum`        | Администрирование: ручной запуск            |
+| `ci_cd_runner --> gc_vacuum`    | Инициализация очистки после тестов          |
+| `schema_evolver --> gc_vacuum`  | Очистка старых версий таблиц после миграций |
+
+---
+
+### 🧩 Всего связей: **16**
+
+* Исходящие: **9**
+* Входящие: **7**
+
+---
+
+✅ `2.5 Очистка (vacuum)` — важнейший элемент MVCC-движка, поддерживающий **оптимальное использование памяти**, **высокую скорость доступа** и **устойчивость к накоплению мусора**.
+Также обеспечивает корректную работу `SYSTEM VERSIONED` и TTL-механизмов.
