--- a/Connections/Incoming/2x06.md
+++ b/Connections/Incoming/2x06.md
@@ -1,1 +1,43 @@
+🔗 **Связи для блока `2.6 Уровни изоляции` (`isolation_levels`)**
+📦 Пакет: `2. Транзакционность и Надёжность`
 
+---
+
+### 🔻 Исходящие связи (`isolation_levels --> X`)
+
+| Направление                             | Целевой блок                           | Назначение |
+| --------------------------------------- | -------------------------------------- | ---------- |
+| `isolation_levels --> txn_manager`      | Управление логикой изоляции транзакций |            |
+| `isolation_levels --> mvcc_engine`      | Определение границ видимости строк     |            |
+| `isolation_levels --> snapshot_manager` | Формирование snapshot по изоляции      |            |
+| `isolation_levels --> sql_executor`     | Контроль выполнения SELECT/UPDATE      |            |
+| `isolation_levels --> sql_optimizer`    | Применение правил safe read/write      |            |
+| `isolation_levels --> wal_manager`      | Транзакционная совместимость WAL       |            |
+| `isolation_levels --> pl_lang_runtime`  | Поддержка уровня изоляции в процедурах |            |
+| `isolation_levels --> rest_api`         | Передача уровня через API              |            |
+| `isolation_levels --> plan_cache`       | Учет уровня при кэшировании плана      |            |
+
+---
+
+### 🔺 Входящие связи (`X --> isolation_levels`)
+
+| Источник                             | Назначение                              |
+| ------------------------------------ | --------------------------------------- |
+| `config_loader --> isolation_levels` | Глобальные настройки изоляции           |
+| `sql_parser --> isolation_levels`    | Парсинг SET TRANSACTION ISOLATION LEVEL |
+| `cli_shell --> isolation_levels`     | CLI-переключение уровня изоляции        |
+| `graphql_api --> isolation_levels`   | Изоляция на уровне GraphQL-сессии       |
+| `dsl_engine --> isolation_levels`    | DSL-инструкции с read/write semantics   |
+| `udf_engine --> isolation_levels`    | Изоляция для пользовательских функций   |
+
+---
+
+### 🧩 Всего связей: **15**
+
+* Исходящие: **9**
+* Входящие: **6**
+
+---
+
+✅ Блок `2.6 Уровни изоляции` обеспечивает реализацию **ACID-требований** и поддержку **четырёх стандартных уровней** (`READ COMMITTED`, `REPEATABLE READ`, `SNAPSHOT ISOLATION`, `SERIALIZABLE`).
+Критично важен для корректной работы MVCC, транзакций и запросов в конкурентной среде.
