--- a/Connections/Incoming/2x07.md
+++ b/Connections/Incoming/2x07.md
@@ -1,1 +1,46 @@
+🔗 **Связи для блока `2.7 Механизм failover` (`failover_engine`)**
+📦 Пакет: `2. Транзакционность и Надёжность`
 
+---
+
+### 🔻 Исходящие связи (`failover_engine --> X`)
+
+| Направление                               | Целевой блок                                   | Назначение |
+| ----------------------------------------- | ---------------------------------------------- | ---------- |
+| `failover_engine --> txn_manager`         | Сигнал об аварийном завершении транзакций      |            |
+| `failover_engine --> replication`         | Переключение ведущей роли (leader election)    |            |
+| `failover_engine --> crash_recovery`      | Инициирование восстановления после сбоя        |            |
+| `failover_engine --> gc_vacuum`           | Принудительный запуск очистки после сбоя       |            |
+| `failover_engine --> structured_logger`   | Журналирование сценариев failover              |            |
+| `failover_engine --> snapshot_manager`    | Сброс несогласованных snapshot'ов              |            |
+| `failover_engine --> tracing_agent`       | Трейсинг маршрута failover                     |            |
+| `failover_engine --> quota_manager`       | Перераспределение квот между узлами            |            |
+| `failover_engine --> prometheus_exporter` | Обновление метрик статуса кластера             |            |
+| `failover_engine --> raft_engine`         | Согласование роли leader/follower в консенсусе |            |
+
+---
+
+### 🔺 Входящие связи (`X --> failover_engine`)
+
+| Источник                                   | Назначение                               |
+| ------------------------------------------ | ---------------------------------------- |
+| `bootstrap_controller --> failover_engine` | Инициализация failover в фазе запуска    |
+| `replication --> failover_engine`          | Обратный сигнал об ошибке синхронизации  |
+| `ci_cd_runner --> failover_engine`         | Тестирование отказоустойчивости          |
+| `rest_api --> failover_engine`             | Администрирование ручного failover       |
+| `raft_engine --> failover_engine`          | Trigger failover из механизма консенсуса |
+| `observability_stack --> failover_engine`  | Аномалия детектирована — вызов failover  |
+| `config_loader --> failover_engine`        | Настройки политики failover и таймаутов  |
+
+---
+
+### 🧩 Всего связей: **17**
+
+* Исходящие: **10**
+* Входящие: **7**
+
+---
+
+✅ `2.7 Механизм failover` — ключевая часть **HA/DR**-архитектуры.
+Обеспечивает автоматическое переключение на резервные узлы при сбоях, восстанавливает состояние и уведомляет все зависимые подсистемы.
+Работает в связке с `replication`, `raft_engine`, `crash_recovery` и метриками.
