--- a/Connections/Incoming/2x08.md
+++ b/Connections/Incoming/2x08.md
@@ -1,1 +1,44 @@
+🔗 **Связи для блока `2.8 Репликация (Raft/Paxos)` (`replication`)**
+📦 Пакет: `2. Транзакционность и Надёжность`
 
+---
+
+### 🔻 Исходящие связи (`replication --> X`)
+
+| Направление                           | Целевой блок                                | Назначение |
+| ------------------------------------- | ------------------------------------------- | ---------- |
+| `replication --> raft_engine`         | Включение/инициализация консенсус-протокола |            |
+| `replication --> wal_manager`         | Трансляция WAL-записей на реплики           |            |
+| `replication --> snapshot_manager`    | Репликация snapshot-состояния               |            |
+| `replication --> txn_manager`         | Распространение статуса транзакций          |            |
+| `replication --> failover_engine`     | Сигнал об отказе leader                     |            |
+| `replication --> recovery_service`    | Восстановление состояния на реплике         |            |
+| `replication --> prometheus_exporter` | Метрики репликации (lag, status)            |            |
+| `replication --> access_control`      | Согласование политик доступа между узлами   |            |
+| `replication --> structured_logger`   | Логирование состояния репликации            |            |
+| `replication --> quota_manager`       | Синхронизация квот на multi-tenant системах |            |
+
+---
+
+### 🔺 Входящие связи (`X --> replication`)
+
+| Источник                          | Назначение                         |
+| --------------------------------- | ---------------------------------- |
+| `config_loader --> replication`   | Конфигурация топологии и ролей     |
+| `failover_engine --> replication` | Переключение роли после сбоя       |
+| `rest_api --> replication`        | Администрирование реплик           |
+| `raft_engine --> replication`     | Консенсус-события для актуализации |
+| `ci_cd_runner --> replication`    | Тестирование распределённости      |
+| `platform_init --> replication`   | Инициализация кластера             |
+
+---
+
+### 🧩 Всего связей: **16**
+
+* Исходящие: **10**
+* Входящие: **6**
+
+---
+
+✅ Блок `2.8 Репликация (Raft/Paxos)` — ядро **активной репликации**, основанной на **распределённом консенсусе**.
+Поддерживает сценарии `active-active`, `active-passive`, disaster recovery, обеспечивает целостность данных и синхронность транзакций между нодами.
