--- a/Connections/Incoming/2x09.md
+++ b/Connections/Incoming/2x09.md
@@ -1,1 +1,43 @@
+🔗 **Связи для блока `2.9 Восстановление после сбоя` (`crash_recovery`)**
+📦 Пакет: `2. Транзакционность и Надёжность`
 
+---
+
+### 🔻 Исходящие связи (`crash_recovery --> X`)
+
+| Направление                              | Целевой блок                                      | Назначение |
+| ---------------------------------------- | ------------------------------------------------- | ---------- |
+| `crash_recovery --> wal_manager`         | Повторное проигрывание логов                      |            |
+| `crash_recovery --> snapshot_manager`    | Восстановление последнего актуального snapshot    |            |
+| `crash_recovery --> txn_manager`         | Завершение подвисших транзакций                   |            |
+| `crash_recovery --> gc_vacuum`           | Очистка старых версий                             |            |
+| `crash_recovery --> buffer_pool`         | Перезаполнение кэша страниц                       |            |
+| `crash_recovery --> structured_logger`   | Логирование этапов восстановления                 |            |
+| `crash_recovery --> prometheus_exporter` | Метрики восстановления (длительность, успешность) |            |
+| `crash_recovery --> failover_engine`     | Завершение режима восстановления                  |            |
+| `crash_recovery --> sql_executor`        | Возврат к исполнению запросов                     |            |
+| `crash_recovery --> plugin_loader`       | Повторная загрузка плагинов после краша           |            |
+
+---
+
+### 🔺 Входящие связи (`X --> crash_recovery`)
+
+| Источник                                  | Назначение                                      |
+| ----------------------------------------- | ----------------------------------------------- |
+| `failover_engine --> crash_recovery`      | Инициирование после переключения                |
+| `bootstrap_controller --> crash_recovery` | Проверка необходимости восстановления на старте |
+| `raft_engine --> crash_recovery`          | Синхронизация состояния после выбора лидера     |
+| `replication --> crash_recovery`          | Запрос восстановления данных на реплике         |
+| `ci_cd_runner --> crash_recovery`         | Проверка сценариев аварийного восстановления    |
+| `platform_init --> crash_recovery`        | Инициализация подсистемы на запуске             |
+
+---
+
+### 🧩 Всего связей: **16**
+
+* Исходящие: **10**
+* Входящие: **6**
+
+---
+
+✅ Блок `2.9 Восстановление после сбоя` обеспечивает **мгновенное восстановление работоспособности СУБД** после неожиданного завершения процесса, сбоя узла или аварийного failover. Использует связку `WAL + Snapshot + MVCC + Transaction status` для полного восстановления без потери целостности.
