--- a/Connections/Incoming/2x10.md
+++ b/Connections/Incoming/2x10.md
@@ -1,1 +1,43 @@
+🔗 **Связи для блока `2.10 WAL Writer` (`wal_writer`)**
+📦 Пакет: `2. Транзакционность и Надёжность`
 
+---
+
+### 🔻 Исходящие связи (`wal_writer --> X`)
+
+| Направление                          | Целевой блок                                   | Назначение |
+| ------------------------------------ | ---------------------------------------------- | ---------- |
+| `wal_writer --> wal_manager`         | Асинхронная передача сгенерированных логов     |            |
+| `wal_writer --> crash_recovery`      | Обеспечение консистентных точек восстановления |            |
+| `wal_writer --> snapshot_manager`    | Обновление точки консистентности snapshot      |            |
+| `wal_writer --> prometheus_exporter` | Метрики скорости записи / задержек             |            |
+| `wal_writer --> structured_logger`   | Диагностическое логирование операций WAL       |            |
+| `wal_writer --> buffer_pool`         | Маркировка dirty pages                         |            |
+| `wal_writer --> raft_engine`         | Передача лога для репликации                   |            |
+| `wal_writer --> replication`         | Инкрементальные логи для реплик                |            |
+| `wal_writer --> tracing_agent`       | Интеграция с трассировкой WAL-записей          |            |
+
+---
+
+### 🔺 Входящие связи (`X --> wal_writer`)
+
+| Источник                              | Назначение                            |
+| ------------------------------------- | ------------------------------------- |
+| `txn_manager --> wal_writer`          | Запрос на запись транзакционного лога |
+| `sql_executor --> wal_writer`         | Логирование DML-операций              |
+| `mvcc_engine --> wal_writer`          | Запись версионных операций            |
+| `bootstrap_controller --> wal_writer` | Инициализация при запуске             |
+| `ci_cd_runner --> wal_writer`         | Нагрузочное тестирование WAL          |
+| `etl_engine --> wal_writer`           | Логирование массовой вставки          |
+| `rest_api --> wal_writer`             | Управление режимами WAL (sync/async)  |
+
+---
+
+### 🧩 Всего связей: **16**
+
+* Исходящие: **9**
+* Входящие: **7**
+
+---
+
+✅ Блок `2.10 WAL Writer` отвечает за **параллельную и высокопроизводительную запись** журнала изменений (Write-Ahead Logging) и гарантирует согласованность при сбоях. Является частью **транзакционной цепочки**: `txn → MVCC → WAL → Snapshot`.
