--- a/Connections/Incoming/2x11.md
+++ b/Connections/Incoming/2x11.md
@@ -1,1 +1,44 @@
+🔗 **Связи для блока `2.11 Служба восстановления` (`recovery_service`)**
+📦 Пакет: `2. Транзакционность и Надёжность`
 
+---
+
+### 🔻 Исходящие связи (`recovery_service --> X`)
+
+| Направление                                | Целевой блок                               | Назначение |
+| ------------------------------------------ | ------------------------------------------ | ---------- |
+| `recovery_service --> snapshot_manager`    | Восстановление на основе последнего снимка |            |
+| `recovery_service --> wal_manager`         | Повторное проигрывание логов               |            |
+| `recovery_service --> txn_manager`         | Корректировка состояния транзакций         |            |
+| `recovery_service --> mvcc_engine`         | Перестроение версионных цепочек            |            |
+| `recovery_service --> page_cache`          | Загрузка страниц в буфер из snapshot       |            |
+| `recovery_service --> structured_logger`   | Логирование этапов восстановления          |            |
+| `recovery_service --> failover_engine`     | Завершение аварийного восстановления       |            |
+| `recovery_service --> prometheus_exporter` | Метрики восстановления                     |            |
+| `recovery_service --> tracing_agent`       | Трассировка восстановления по этапам       |            |
+
+---
+
+### 🔺 Входящие связи (`X --> recovery_service`)
+
+| Источник                                    | Назначение                             |
+| ------------------------------------------- | -------------------------------------- |
+| `crash_recovery --> recovery_service`       | Делегирование операций восстановления  |
+| `bootstrap_controller --> recovery_service` | Инициализация при старте               |
+| `raft_engine --> recovery_service`          | Реплика инициирует восстановление      |
+| `replication --> recovery_service`          | Реплика получает snapshot и логи       |
+| `ci_cd_runner --> recovery_service`         | Тесты на восстановление                |
+| `etl_engine --> recovery_service`           | При восстановлении после сбоя загрузки |
+
+---
+
+### 🧩 Всего связей: **15**
+
+* Исходящие: **9**
+* Входящие: **6**
+
+---
+
+✅ Блок `2.11 Служба восстановления` — центральный механизм **восстановления системного состояния** из WAL и snapshot. Он обеспечивает возврат базы к последовательно согласованному состоянию с учетом всех транзакций, включая незавершённые.
+
+📦 Таким образом, завершён полный пакет `2. Транзакционность и Надёжность`.
