--- a/Connections/Incoming/3x01.md
+++ b/Connections/Incoming/3x01.md
@@ -1,1 +1,44 @@
+🔗 **Связи для блока `3.1 SQL-парсер` (`sql_parser`)**
+📦 Пакет: `3. SQL и Языки`
+
+---
+
+### 🔻 Исходящие связи (`sql_parser --> X`)
+
+| Направление                        | Целевой блок                                          | Назначение |
+| ---------------------------------- | ----------------------------------------------------- | ---------- |
+| `sql_parser --> sql_planner`       | Передача дерева разбора для построения плана          |            |
+| `sql_parser --> sql_optimizer`     | Предварительная информация для rule-based оптимизации |            |
+| `sql_parser --> udf_engine`        | Обнаружение вызовов UDF                               |            |
+| `sql_parser --> pl_lang_runtime`   | Обработка блоков BEGIN...END и PL/SQL процедур        |            |
+| `sql_parser --> access_control`    | Проверка прав доступа по разобранному AST             |            |
+| `sql_parser --> structured_logger` | Логирование разбора SQL-запросов                      |            |
+| `sql_parser --> tracing_agent`     | Привязка запроса к трассировке                        |            |
+| `sql_parser --> audit_logger`      | Запись запросов в аудит                               |            |
+
+---
+
+### 🔺 Входящие связи (`X --> sql_parser`)
+
+| Источник                        | Назначение                          |
+| ------------------------------- | ----------------------------------- |
+| `rest_api --> sql_parser`       | Запрос SQL по HTTP                  |
+| `cli_shell --> sql_parser`      | Ввод через командную строку         |
+| `jdbc_server --> sql_parser`    | SQL через JDBC                      |
+| `odbc_gateway --> sql_parser`   | SQL через ODBC                      |
+| `grpc_interface --> sql_parser` | SQL через gRPC-интерфейс            |
+| `dsl_engine --> sql_parser`     | Обработка DSL-транзакций через SQL  |
+| `external_hooks --> sql_parser` | Внешние вызовы, оборачиваемые в SQL |
+| `json_api --> sql_parser`       | JSON → SQL преобразование           |
+
+---
+
+### 🧩 Всего связей: **16**
+
+* Исходящие: **8**
+* Входящие: **8**
+
+---
+
+✅ Блок `3.1 SQL-парсер` — это **первая стадия обработки SQL-запроса**, преобразующая текст в AST (abstract syntax tree), проверяя синтаксис и подготавливая дерево для оптимизации и планирования. Он служит мостом между всеми интерфейсами ввода и внутренними исполнительными модулями.
 
