--- a/Connections/Incoming/3x02.md
+++ b/Connections/Incoming/3x02.md
@@ -1,1 +1,39 @@
+🔗 **Связи для блока `3.2 Планировщик SQL` (`sql_planner`)**
+📦 Пакет: `3. SQL и Языки`
+
+---
+
+### 🔻 Исходящие связи (`sql_planner --> X`)
+
+| Направление                         | Целевой блок                                   | Назначение |
+| ----------------------------------- | ---------------------------------------------- | ---------- |
+| `sql_planner --> sql_optimizer`     | Передача логического плана для оптимизации     |            |
+| `sql_planner --> access_control`    | Проверка прав на таблицы/столбцы до выполнения |            |
+| `sql_planner --> structured_logger` | Логирование этапов планирования                |            |
+| `sql_planner --> tracing_agent`     | Трассировка фазы построения плана              |            |
+| `sql_planner --> udf_engine`        | Подстановка вызовов UDF в план                 |            |
+| `sql_planner --> schema_evolver`    | Проверка актуальности схемы перед выполнением  |            |
+
+---
+
+### 🔺 Входящие связи (`X --> sql_planner`)
+
+| Источник                          | Назначение                                      |
+| --------------------------------- | ----------------------------------------------- |
+| `sql_parser --> sql_planner`      | AST передаётся для построения логического плана |
+| `dsl_engine --> sql_planner`      | DSL-инструкции конвертируются в SQL-планы       |
+| `pl_lang_runtime --> sql_planner` | Планы из процедур или триггеров                 |
+| `rest_api --> sql_planner`        | Direct query execution                          |
+| `etl_engine --> sql_planner`      | Генерация batch-планов загрузки                 |
+
+---
+
+### 🧩 Всего связей: **11**
+
+* Исходящие: **6**
+* Входящие: **5**
+
+---
+
+✅ Блок `3.2 Планировщик SQL` отвечает за **преобразование синтаксического дерева** в логический план запроса, где определяется структура выполнения, включая сканирование таблиц, фильтрацию, join'ы и сортировки. Это ключевой шаг перед оптимизацией.
 
