--- a/Connections/Incoming/3x03.md
+++ b/Connections/Incoming/3x03.md
@@ -1,1 +1,44 @@
+🔗 **Связи для блока `3.3 Оптимизатор SQL` (`sql_optimizer`)**
+📦 Пакет: `3. SQL и Языки`
+
+---
+
+### 🔻 Исходящие связи (`sql_optimizer --> X`)
+
+| Направление                           | Целевой блок                                         | Назначение |
+| ------------------------------------- | ---------------------------------------------------- | ---------- |
+| `sql_optimizer --> sql_executor`      | Передача физического плана на исполнение             |            |
+| `sql_optimizer --> index_manager`     | Использование индексов для join/scan                 |            |
+| `sql_optimizer --> adaptive_joins`    | Подбор стратегии соединений                          |            |
+| `sql_optimizer --> plan_cache`        | Кэширование плана                                    |            |
+| `sql_optimizer --> runtime_optimizer` | Участие в адаптивной оптимизации во время выполнения |            |
+| `sql_optimizer --> tracing_agent`     | Трассировка решений оптимизации                      |            |
+| `sql_optimizer --> structured_logger` | Лог оптимизаций (rewrites, costing)                  |            |
+| `sql_optimizer --> udf_engine`        | Подключение UDF в план                               |            |
+| `sql_optimizer --> arrow_runtime`     | Выбор исполняющего движка (векторный, Arrow и т.д.)  |            |
+
+---
+
+### 🔺 Входящие связи (`X --> sql_optimizer`)
+
+| Источник                           | Назначение                         |
+| ---------------------------------- | ---------------------------------- |
+| `sql_parser --> sql_optimizer`     | При rule-based оптимизации         |
+| `sql_planner --> sql_optimizer`    | Передача логического плана         |
+| `dsl_engine --> sql_optimizer`     | Упрощённые DSL-планы               |
+| `jit_engine --> sql_optimizer`     | Inline-оптимизация JIT-трасс       |
+| `plan_cache --> sql_optimizer`     | Реиспользование/инвалидация планов |
+| `ci_cd_runner --> sql_optimizer`   | Тесты на качество плана            |
+| `schema_evolver --> sql_optimizer` | Адаптация к изменениям схемы       |
+
+---
+
+### 🧩 Всего связей: **16**
+
+* Исходящие: **9**
+* Входящие: **7**
+
+---
+
+✅ Блок `3.3 Оптимизатор SQL` — это **центр cost-based, rule-based и адаптивной оптимизации**. Он принимает логические планы и применяет преобразования, включая reordering join'ов, pushdown фильтров, выбор индексов и выбор физического исполнения.
 
