--- a/Connections/Incoming/3x04.md
+++ b/Connections/Incoming/3x04.md
@@ -1,1 +1,50 @@
+🔗 **Связи для блока `3.4 Исполнитель SQL` (`sql_executor`)**
+📦 Пакет: `3. SQL и Языки`
+
+---
+
+### 🔻 Исходящие связи (`sql_executor --> X`)
+
+| Направление                             | Целевой блок                           | Назначение |
+| --------------------------------------- | -------------------------------------- | ---------- |
+| `sql_executor --> vectorized_executor`  | Выполнение с векторизацией             |            |
+| `sql_executor --> arrow_executor`       | Исполнение в формате Arrow/PAX         |            |
+| `sql_executor --> streaming_aggregator` | Агрегация потоковых данных             |            |
+| `sql_executor --> buffer_pool`          | Чтение страниц из буфера               |            |
+| `sql_executor --> column_store`         | Доступ к колонкам при scan/select      |            |
+| `sql_executor --> row_store`            | Операции с OLTP-строками               |            |
+| `sql_executor --> udf_engine`           | Вызов встроенных функций               |            |
+| `sql_executor --> pl_lang_runtime`      | Исполнение логики процедур             |            |
+| `sql_executor --> tracing_agent`        | Обратная трассировка планов            |            |
+| `sql_executor --> structured_logger`    | Запись фактических шагов выполнения    |            |
+| `sql_executor --> access_control`       | Проверка доступа в момент исполнения   |            |
+| `sql_executor --> snapshot_manager`     | Чтение данных в консистентном снапшоте |            |
+
+---
+
+### 🔺 Входящие связи (`X --> sql_executor`)
+
+| Источник                            | Назначение                           |
+| ----------------------------------- | ------------------------------------ |
+| `sql_optimizer --> sql_executor`    | Передача физического плана           |
+| `rest_api --> sql_executor`         | Выполнение ad-hoc запросов           |
+| `grpc_interface --> sql_executor`   | Исполнение по протоколу gRPC         |
+| `cli_shell --> sql_executor`        | Выполнение из CLI                    |
+| `dsl_engine --> sql_executor`       | DSL-инструкции на SQL-исполнителе    |
+| `pl_lang_runtime --> sql_executor`  | Вызовы из процедур                   |
+| `jit_engine --> sql_executor`       | JIT-компиляция под Executor          |
+| `cdc_streaming --> sql_executor`    | Генерация изменений                  |
+| `etl_engine --> sql_executor`       | Массовая загрузка/инсерт             |
+| `recovery_service --> sql_executor` | Повтор исполнения при восстановлении |
+
+---
+
+### 🧩 Всего связей: **22**
+
+* Исходящие: **12**
+* Входящие: **10**
+
+---
+
+✅ Блок `3.4 Исполнитель SQL` — **ядро физического выполнения запросов**, использующее векторизацию, потоковую агрегацию, доступ к хранилищам и встроенные функции. Это ключевой компонент исполнения OLTP/OLAP с поддержкой HTAP.
 
